RESOLVED FIXED115525
fourthTier: Structure transition table keys don't have to ref their StringImpl's
https://bugs.webkit.org/show_bug.cgi?id=115525
Summary fourthTier: Structure transition table keys don't have to ref their StringImpl's
Filip Pizlo
Reported 2013-05-02 14:09:13 PDT
Patch forthcoming.
Attachments
the patch (4.84 KB, patch)
2013-05-02 14:12 PDT, Filip Pizlo
ggaren: review+
Filip Pizlo
Comment 1 2013-05-02 14:12:18 PDT
Created attachment 200333 [details] the patch
Geoffrey Garen
Comment 2 2013-05-02 16:56:46 PDT
Comment on attachment 200333 [details] the patch r=me
Filip Pizlo
Comment 3 2013-05-02 19:57:08 PDT
Note You need to log in before you can comment on or make changes to this bug.